gcp/iap-ingress/overlays/gcp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: kubeflow-ip
    kubernetes.io/tls-acme: "true"
  name: envoy-ingress
spec:
  rules:
  - host: kubeflow.endpoints.constant-cubist-173123.cloud.goog
    http:
      paths:
      - backend:
          serviceName: envoy
          servicePort: 8080
        path: /*
